namespace WorkloadGenerator.Data.Models.Operation.Http;

public class HttpOperationRequestPayloadUnresolved
{
    public HttpPayloadType Type { get; set; }

    public object Content { get; set; }
}