namespace WorkloadGenerator.Data.Models.Operation;

public abstract class OperationExecutableBase
{
    public virtual OperationType Type { get; set; }
}