namespace WorkloadGenerator.Data.Models.Operation;

public class OperationInputBase
{
    public virtual OperationType Type { get; set; }
}