namespace WorkloadGenerator.Data.Models.Operation.Http;

public abstract class HttpOperationRequestPayloadResolvedBase
{
    public virtual HttpPayloadType Type { get; set; }
}