namespace WorkloadGenerator.Data.Models.Operation;

public interface IOperationResolved : IOperation
{
}