@startuml
class OperationInputBase {
  OperationType Type
}

abstract class OperationExecutableBase {
  OperationType Type
}

interface IOperationUnresolved
interface IOperationResolved

'http ops'

abstract class HttpOperationInputBase
OperationInputBase <|-- HttpOperationInputBase

class HttpOperationInputResolved 
{
  HttpOperationRequestPayloadResolvedBase? RequestPayload 
}

abstract class HttpOperationRequestPayloadResolvedBase

HttpOperationInputResolved --* HttpOperationRequestPayloadResolvedBase
HttpOperationInputBase <|-- HttpOperationInputResolved
IOperationResolved <|-- HttpOperationInputResolved

class JsonPayloadResolved
{
  JsonNode Content
}

class HttpOperationInputUnresolved
{
    Argument[]? Arguments
    DynamicVariable[]? DynamicVariables 
    HttpOperationRequestPayloadUnresolved? RequestPayload 
}

HttpOperationInputUnresolved --* HttpOperationRequestPayloadUnresolved

class HttpOperationRequestPayloadUnresolved 
{
    HttpPayloadType Type
    object Content
}

HttpOperationInputUnresolved --|> HttpOperationInputBase
HttpOperationInputUnresolved --|> IOperationUnresolved
JsonPayloadResolved --|> HttpOperationRequestPayloadResolvedBase

'sleep ops'
abstract class SleepOperationInputBase
 
OperationInputBase <|-- SleepOperationInputBase 
SleepOperationInputBase <|-- SleepOperationInputResolved
IOperationResolved <|-- SleepOperationInputResolved

class SleepOperationInputUnresolved
SleepOperationInputUnresolved --|> SleepOperationInputBase
SleepOperationInputUnresolved --|> IOperationUnresolved

class HttpOperationTransactionExecutable
{
    Action<HttpRequestMessage>? PrepareRequestMessage
}

class SleepOperationTransactionExecutable 
{
    Func<Task> Sleep()
}
SleepOperationTransactionExecutable --|> OperationExecutableBase

HttpOperationTransactionExecutable --|> OperationExecutableBase
@enduml